crates/etas_tests/fixtures/compiler/projects/positive/dependency_alias_nominal_types/src/app/model.es
module app.model;

public flow project_path() -> string
{
    return "/workspace/project";
}

public flow normalize_path(value: string) -> string
{
    return value;
}
