crates/etas_tests/fixtures/compiler/projects/negative/wildcard_ambiguity/src/app/right.es
module app.right;

public flow helper() -> unit {
    return;
}
